--- a/package.json
+++ b/package.json
@@ -2,19 +2,42 @@
   "name": "angels",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.2",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "config": "^3.2.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.6.2",
+    "mongoose": "^5.8.9",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "spectre.css": "^0.5.8",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "spa": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js",
+    "server:dev": "nodemon ./backend/server.js",
+    "dev": "npm-run-all --parallel spa server:dev"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
+  "proxy": "http://localhost:3001"
 }
