--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.6.2",
+    "@auth0/auth0-spa-js": "^1.6.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -18,14 +18,14 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jwks-rsa": "^1.6.2",
-    "mongoose": "^5.8.9",
+    "mongoose": "^5.8.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "spectre.css": "^0.5.8",
     "uuid": "^3.4.0"
   },
