--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.2.0",
     "spectre.css": "^0.5.8",
     "uuid": "^3.4.0"
   },
@@ -56,5 +56,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
-  }
+  },
+  "proxy": "http:localhost:3000"
 }
