--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "http-proxy-middleware": "^0.20.0",
     "jwks-rsa": "^1.6.2",
     "mongoose": "^5.8.10",
     "npm-run-all": "^4.1.5",
@@ -56,6 +57,5 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
-  },
-  "proxy": "https://menschempoweredvc.herokuapp.com"
+  }
 }
