--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "npm install && npm run build",
     "spa": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
