--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "nodemon server.js"
   },
