--- a/package.json
+++ b/package.json
@@ -22,20 +22,8 @@
     "heroku-postbuild": "cd client && npm install && npm run build",
     "dev": "nodemon server.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "engines": {
+    "node": "6.11.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
