--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "dev": "nodemon server.js"
