--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.2.0",
     "spectre.css": "^0.5.8"
   },
   "scripts": {
