--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angels",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
@@ -14,10 +14,10 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
