--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "material-ui-confirm": "^2.0.4",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.11.0",
