fixed env fixed readme?

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 ADMIN_EMAIL=joseph@reshuffle.com
+MONGO_SETUP=mongodb+srv://joseph:1234qwer@cluster0-ie2d2.mongodb.net/test?retryWrites=true&w=majority
