--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "material-ui-confirm": "^2.0.4",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "spectre.css": "^0.5.8"
+    "react-scripts": "^3.4.0",
+    "spectre.css": "^0.5.8",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
